--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title"><!--About Me--></a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">Return Home</a></li>
 						<li><a href="interests.html">Interests</a></li>
 						<!--<li><a href="aboutme.html" class="active">Generic</a></li>-->
 						<!--<li><a href="elements.html">Elements</a></li>-->
@@ -31,7 +30,7 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper">
+					<section id="main" class="headerwrapper">
 						<div class="inner">
 							<h1 class="major">About Me</h1>
 							<span class="image fit"><img src="images/KyleArjun.jpg" alt="" id="aboutme-image"/></span>
