--- a/interests.html
+++ b/interests.html
@@ -16,16 +16,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<head>
-					<style>
-						#wrapper, #main {
-							font-family: 'Gill Sans';
-						}
-					</style>
-				</head>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">Return Home</a></li>
 						<li><a href="aboutme.html">About Me</a></li>
 						<!--<li><a href="aboutme.html" class="active">Generic</a></li>-->
 						<!--<li><a href="elements.html">Elements</a></li>-->
@@ -36,7 +29,7 @@
 		<div id="wrapper">
 
 				<!-- Interests -->
-				<section id="main" class="wrapper">
+				<section id="main" class="headerwrapper">
 					<div class="inner">
 						<h1 class="major">Interests</h1>
 				
