Added more information to Golf section.

--- a/interests.html
+++ b/interests.html
@@ -50,8 +50,8 @@
 							<div class="text-content">
 								<h2>Golf</h2>
 								<p>Best round: 90</p>
-								<p>Favorite Course Played: The Arboretum Club</p>
-								<p>Courses Played: Village Green Golf Course | Deerfield Golf Course | The Arboretum Club | Royal Melbourne Country Club | Hawthorn Woods Country Club | Knollwood Country Club | Nickel Knolls Golf Club | Cranes Landing | Chick Evans Golf Course </p>
+								<p>Favorite Course Played: Hawthorn Woods Country Club</p>
+								<p>Courses Played: Village Green Golf Course | Deerfield Golf Course | The Arboretum Club | Royal Melbourne Country Club | Hawthorn Woods Country Club | Knollwood Country Club | Nickel Knolls Golf Club | Cranes Landing | Chick Evans Golf Course | Deerpath Golf Course</p>
 							</div>
 						</div>
 				
@@ -63,7 +63,7 @@
 								<h2>Friends</h2>
 								<p>I enjoy hanging out with my friends any chance that I get, and love spending time with each and every one.</p>
 								<p>I learn a lot from them, and have gained endless memories with everyone.</p>
-								<p> Shoutout LHJ!</p>
+								<p>Shoutout LHJ!</p>
 							</div>
 						</div>
 					</div>
