Added spacing between phone number in index.html.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(847)-502-6026</span>
+											<span>(847) - 502 - 6026</span>
 										</li>
 										<li>
 											<h3>Socials</h3>
