updated golf, and about me

--- a/interests.html
+++ b/interests.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Interests Page</title>
@@ -20,8 +15,6 @@
 					<ul>
 						<li><a href="index.html">Return Home</a></li>
 						<li><a href="aboutme.html">About Me</a></li>
-						<!--<li><a href="aboutme.html" class="active">Generic</a></li>-->
-						<!--<li><a href="elements.html">Elements</a></li>-->
 					</ul>
 				</nav>
 			</header>
@@ -49,9 +42,9 @@
 							<span class="image fit"><img src="images/KyleGolf.jpg" alt="" id="interests-image2"/></span>
 							<div class="text-content">
 								<h2>Golf</h2>
-								<p>Best round: 90</p>
+								<p>Best round: 85</p>
 								<p>Favorite Course Played: Hawthorn Woods Country Club</p>
-								<p>Courses Played: Village Green Golf Course | Deerfield Golf Course | The Arboretum Club | Royal Melbourne Country Club | Hawthorn Woods Country Club | Knollwood Country Club | Nickel Knolls Golf Club | Cranes Landing | Chick Evans Golf Course | Deerpath Golf Course</p>
+								<p>Courses Played: Village Green Golf Course | Deerfield Golf Course | The Arboretum Club | Royal Melbourne Country Club | Hawthorn Woods Country Club | Knollwood Country Club | Nickel Knolls Golf Club | Cranes Landing | Chick Evans Golf Course | Deerpath Golf Course | Countryside Golf Club | Chalet Hills Golf Club </p>
 							</div>
 						</div>
 				
