updated aboutme and index

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
 						<p>A compilation of my recent and favorite projects.</p>
 						<div class="features">
 							<section>
+								<span class="icon solid major fa-music"></span>
+								<h3>Spotify Hand Gestures</h3>
+								<p>Inspired by BMW's hand gesture controls.</p>
+								<p><a href="https://github.com/kylepark26/SpotifyHandGesture" target="_blank">Link to Project</a></p>
+							</section>
+							<section>
 								<span class="icon solid major fa-paper-plane"></span>
 								<h3>Buckeye Vertical</h3>
 								<p>Software Engineer on the Object Detection Team</p>
@@ -111,17 +117,17 @@
 								<p><a href="https://github.com/kylepark26/CSE2221" target="_blank">Link to Project</a></p>
 							</section>
 							<section>
-								<span class="icon solid major fa-hashtag"></span>
-								<h3>Tic-Tac-Toe</h3>
-								<p>Learning Java and Java Swing basics.</p>
-								<p><a href="https://github.com/kylepark26/Tic-Tac-Toe" target="_blank">Link to Project</a></p>
-							</section>
-							<section>
 								<span class="icon solid major fa-money-bill"></span>
 								<h3>BlackJack</h3>
 								<p>Simple BlackJack project created with MATLAB.</p>
 								<p><a href="https://github.com/kylepark26/Blackjack" target="_blank">Link to Project</a></p>
 							</section>
+							<!-- <section>
+								<span class="icon solid major fa-hashtag"></span>
+								<h3>Tic-Tac-Toe</h3>
+								<p>Learning Java and Java Swing basics.</p>
+								<p><a href="https://github.com/kylepark26/Tic-Tac-Toe" target="_blank">Link to Project</a></p>
+							</section> -->
 						</div>
 						<ul class="actions">
 							<li><a href="https://github.com/kylepark26" class="button" target="_blank">GitHub Link</a></li>
@@ -152,9 +158,8 @@
 												<li><a href="https://open.spotify.com/user/4ulrw22cnkio0eagks013fcyb?si=3b0f08c9c92b4da6" class="icon brands fa-spotify" target="_blank"><span class="label">Spotify</span></a></li>
 											</ul>
 										</li>
-										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3056.622919269212!2d-83.01551218815742!3d39.994531381108374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88388ec045c1d3d3%3A0x5cf5e5a0ef042dcb!2s230%20W%2010th%20Ave%2C%20Columbus%2C%20OH%2043210!5e0!3m2!1sen!2sus!4v1731795528181!5m2!1sen!2sus" 
-										width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-									</iframe>
+										<!-- location -->
+										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3056.053430705971!2d-83.02231552358279!3d40.00725407150837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88388e99f9253c23%3A0x66632ac178416b67!2sRiverwatch%20Tower!5e0!3m2!1sen!2sus!4v1757170252901!5m2!1sen!2sus" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 									</ul>
 								</section>
 							</div>
@@ -167,7 +172,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<!-- <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
