--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<!-- Headers -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a class="image"><img src="images/KyleDavidEan.jpg" alt="" data-position="center center"/></a>
+							<a class="image"><img src="images/KyleLauren.JPG" alt="" data-position="center center"/></a>
 							<div class="content">
 								<div class="inner">
 									<h2>About Me</h2>
@@ -66,7 +66,7 @@
 							</div>
 						</section>
 						<section>
-							<a class="image"><img src="images/KyleSoundBar.jpg" alt="" data-position="25% 25%"/></a>
+							<a class="image"><img src="images/BoilerRoom.JPG" alt="" data-position="25% 25%"/></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Interests</h2>
