--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
 						<p>A compilation of my recent and favorite projects.</p>
 						<div class="features">
 							<section>
+								<span class="icon solid major fa-camera"></span>
+								<h3>Moodboard App</h3>
+								<p>A merge of Pinterest and Spotify.</p>
+								<p><a href="https://github.com/kylepark26/MoodboardApp" target="_blank">Link to Project</a></p>
+							</section>
+							<section>
 								<span class="icon solid major fa-music"></span>
 								<h3>Spotify Hand Gestures</h3>
 								<p>Inspired by BMW's hand gesture controls.</p>
@@ -110,12 +116,12 @@
 								<p>Worked with Collaborative Software Development Club to create a news blog with MERN stack.</p>
 								<p><a href="https://github.com/Collaborative-Software-Development-Club" target="_blank">Link to Project</a></p>
 							</section>
-							<section>
+							<!-- <section>
 								<span class="icon solid major fa-school"></span>
 								<h3>CSE 2221</h3>
 								<p>All Software 1 Projects and Labs.</p>
 								<p><a href="https://github.com/kylepark26/CSE2221" target="_blank">Link to Project</a></p>
-							</section>
+							</section> -->
 							<section>
 								<span class="icon solid major fa-money-bill"></span>
 								<h3>BlackJack</h3>
