added interest golf photo

--- a/interests.html
+++ b/interests.html
@@ -51,7 +51,7 @@
 						<div class="divider"></div>
 
 						<div class="content-section">
-							<span class="image fit"><img src="images/KyleGolf2025.jpg" alt="" id="interests-image3"/></span>
+							<span class="image fit"><img src="images/KyleGolf2025.JPG" alt="" id="interests-image3"/></span>
 							<div class="text-content">
 								<h2>Golf</h2>
 								<p>Best round: 85</p>
