--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
 					<section id="main" class="headerwrapper">
 						<div class="inner">
 							<h1 class="major">About Me</h1>
-							<span class="image fit"><img src="images/KyleArjun.jpg" alt="" id="aboutme-image"/></span>
+							<span class="image fit"><img src="images/KyleArjunBday.JPG" alt="" id="aboutme-image"/></span>
 							<p>I'm a current junior undergraduate student at The Ohio State University, majoring in Computer Science and Engineering specializing in Artificial Intelligence, with a minor in Mathematics. </p>
 							<p>My interests lie in devoting myself to expanding my knowledge in the diverse world of technology, to further implement my skills and passion to learn, and involve myself in an industrious environment surrounding software engineering. </p>
 							<p>In my free time, I enjoy broadening my knowledge in programming languages, training for triathlons, going to the gym, listening to music, hanging out with my friends, photography, and playing sports.</p>
