--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<h2>Resume</h2>
 									<p>Updated October 2025 Version</p>
 									<ul class="actions">
-										<li><a href="files/KyleParkOctoberResume.pdf" download="KyleResume.pdf" class="button">Download</a></li>
+										<li><a href="files/KyleParkOctResume.pdf" download="KyleResume.pdf" class="button">Download</a></li>
 									</ul>
 								</div>
 							</div>
