added projects and grad date

--- a/index.html
+++ b/index.html
@@ -87,9 +87,15 @@
 						<p>A compilation of my recent and favorite projects.</p>
 						<div class="features">
 							<section>
+								<span class="icon solid major fa-blog"></span>
+								<h3>Python API Development</h3>
+								<p>Learning technologies of FastAPI, Pydantic, SQLAlcehmy, PostgreSQL, and many more.</p>
+								<p><a href="https://github.com/kylepark26/PythonAPIDevelopment" target="_blank">Link to Project</a></p>
+							</section>
+							<section>
 								<span class="icon solid major fa-camera"></span>
 								<h3>Moodboard App</h3>
-								<p>A merge of Pinterest and Spotify.</p>
+								<p>A combination of Pinterest and Spotify.</p>
 								<p><a href="https://github.com/kylepark26/MoodboardApp" target="_blank">Link to Project</a></p>
 							</section>
 							<section>
@@ -97,6 +103,12 @@
 								<h3>Spotify Hand Gestures</h3>
 								<p>Inspired by BMW's hand gesture controls.</p>
 								<p><a href="https://github.com/kylepark26/SpotifyHandGesture" target="_blank">Link to Project</a></p>
+							</section>
+							<section>
+								<span class="icon solid major fa-music"></span>
+								<h3>Spotify Lyric Extension</h3>
+								<p>Allowing Lyric Meanings to appear on Spotify from Genius.</p>
+								<p><a href="https://github.com/kylepark26/SpotifyLyricExtension" target="_blank">Link to Project</a></p>
 							</section>
 							<section>
 								<span class="icon solid major fa-paper-plane"></span>
@@ -116,18 +128,18 @@
 								<p>Worked with Collaborative Software Development Club to create a news blog with MERN stack.</p>
 								<p><a href="https://github.com/Collaborative-Software-Development-Club" target="_blank">Link to Project</a></p>
 							</section>
-							<!-- <section>
-								<span class="icon solid major fa-school"></span>
-								<h3>CSE 2221</h3>
-								<p>All Software 1 Projects and Labs.</p>
-								<p><a href="https://github.com/kylepark26/CSE2221" target="_blank">Link to Project</a></p>
-							</section> -->
 							<section>
 								<span class="icon solid major fa-money-bill"></span>
 								<h3>BlackJack</h3>
 								<p>Simple BlackJack project created with MATLAB.</p>
 								<p><a href="https://github.com/kylepark26/Blackjack" target="_blank">Link to Project</a></p>
 							</section>
+							<!-- <section>
+								<span class="icon solid major fa-school"></span>
+								<h3>CSE 2221</h3>
+								<p>All Software 1 Projects and Labs.</p>
+								<p><a href="https://github.com/kylepark26/CSE2221" target="_blank">Link to Project</a></p>
+							</section> -->
 							<!-- <section>
 								<span class="icon solid major fa-hashtag"></span>
 								<h3>Tic-Tac-Toe</h3>
