--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Resume</h2>
-									<p>Updated October 2025 Version</p>
+									<p>Updated November 2025 Version</p>
 									<ul class="actions">
-										<li><a href="files/KyleParkOctResume.pdf" download="KyleResume.pdf" class="button">Download</a></li>
+										<li><a href="files/KyleParkNovemberResume.pdf" download="KyleResume.pdf" class="button">Download</a></li>
 									</ul>
 								</div>
 							</div>
