added project and resume

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Resume</h2>
-									<p>Updated November 2025 Version</p>
+									<p>Updated December 2025 Version</p>
 									<ul class="actions">
-										<li><a href="files/KyleParkResumeNovember2025.pdf" download="KyleResume.pdf" class="button">Download</a></li>
+										<li><a href="files/KyleParkResumeDecember2025.pdf" download="KyleResume.pdf" class="button">Download</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,6 +86,12 @@
 						<h2>Projects</h2>
 						<p>A compilation of my recent and favorite projects.</p>
 						<div class="features">
+							<section>
+								<span class="icon solid major fa-bug"></span>
+								<h3>Spotted Lanternfly Prediction</h3>
+								<p>Collected and research data, and used logistic regression to predict Columubus spread. </p>
+								<p><a href="https://github.com/kylepark26/SpottedLanternflyPrediction" target="_blank">Link to Project</a></p>
+							</section>
 							<section>
 								<span class="icon solid major fa-blog"></span>
 								<h3>Python API Development</h3>
@@ -134,12 +140,12 @@
 								<p>Simple BlackJack project created with MATLAB.</p>
 								<p><a href="https://github.com/kylepark26/Blackjack" target="_blank">Link to Project</a></p>
 							</section>
-							<!-- <section>
+							<section>
 								<span class="icon solid major fa-school"></span>
 								<h3>CSE 2221</h3>
 								<p>All Software 1 Projects and Labs.</p>
 								<p><a href="https://github.com/kylepark26/CSE2221" target="_blank">Link to Project</a></p>
-							</section> -->
+							</section>
 							<!-- <section>
 								<span class="icon solid major fa-hashtag"></span>
 								<h3>Tic-Tac-Toe</h3>
