added new project and resume

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<h2>Resume</h2>
 									<p>Updated December 2025 Version</p>
 									<ul class="actions">
-										<li><a href="files/KyleParkResumeDecember2025.pdf" download="KyleResume.pdf" class="button">Download</a></li>
+										<li><a href="files/Kyle_Park_December2025Resume.pdf" download="KyleResume.pdf" class="button">Download</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,6 +86,12 @@
 						<h2>Projects</h2>
 						<p>A compilation of my recent and favorite projects.</p>
 						<div class="features">
+							<section>
+								<span class="icon solid major fa-bug"></span>
+								<h3>InstaOrder</h3>
+								<p>A website that helps you choose the perfect photo order for your next Instagram post. </p>
+								<p><a href="https://github.com/kylepark26/SpottedLanternflyPrediction" target="_blank">Link to Project</a></p>
+							</section>
 							<section>
 								<span class="icon solid major fa-bug"></span>
 								<h3>Spotted Lanternfly Prediction</h3>
@@ -116,7 +122,7 @@
 								<p>Allowing Lyric Meanings to appear on Spotify from Genius.</p>
 								<p><a href="https://github.com/kylepark26/SpotifyLyricExtension" target="_blank">Link to Project</a></p>
 							</section>
-							<section>
+							<!-- <section>
 								<span class="icon solid major fa-paper-plane"></span>
 								<h3>Buckeye Vertical</h3>
 								<p>Software Engineer on the Object Detection Team</p>
@@ -145,7 +151,7 @@
 								<h3>CSE 2221</h3>
 								<p>All Software 1 Projects and Labs.</p>
 								<p><a href="https://github.com/kylepark26/CSE2221" target="_blank">Link to Project</a></p>
-							</section>
+							</section> -->
 							<!-- <section>
 								<span class="icon solid major fa-hashtag"></span>
 								<h3>Tic-Tac-Toe</h3>
